Fix align of inputs in settings

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -11,6 +11,7 @@
 
 input, select {
     vertical-align: top;
+    display: inline-block;
 }
 
 input:not([type="checkbox"]), select {
